updates through chapter 4

--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -99,7 +99,7 @@ This is the definition used for the remainder of this dissertation.
         \end{enumerate}
         This model allows software to be built over a series of iterations
         without risking too much time or effort in any single iteration.
-        Sprial requires a very adaptive management approach
+        Spiral requires a very adaptive management approach
         as well as flexibility of the key stakeholders \cite{Ruparelia2010}.
         It can also be difficult to identify risks that will occur in future
         iterations.
@@ -155,7 +155,7 @@ This is the definition used for the remainder of this dissertation.
                 functionality is considered a requirement.  
             \item[2. Design] \hfill \\ Before writing any code, the 
                 necessary infrastructure and involved software systems
-                must be identified. This phase can serve as a roadmap for the 
+                must be identified. This phase can serve as a guideline for the 
                 remaining phases. If done properly, this phase can greatly 
                 help the later phases.
             \item[3. Implementation] \hfill \\ Often the only phase of the SDLC 
