--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -161,7 +161,7 @@
             organization is traveling in the right direction.  Unfortunately,
             KRIs are commonly mistaken for KPIs \cite{parmenter2010}.  KRIs
             do not tell an organization what is needed to improve the 
-            results.  KRIs are highly benefical for high-level management
+            results.  KRIs are highly beneficial for high-level management
             and not necessarily beneficial for staff working directly on 
             the software.  For
             an SDO, some possible KRIs are seen in Table \ref{tab:KRI}.
@@ -194,7 +194,7 @@
             
         
         \subsubsection{PERFORMANCE INDICATOR (PI) FOR AN SDO}
-            \textit{Performance Indicators} are nonfinancial performance measures
+            \textit{Performance Indicators} are non-financial performance measures
             that help a team align themselves with the organizations 
             strategy.  These are important to the organizations success, but
             they are not the key measures that will lead to drastic improvement.  They are specifically tied to a team and all staff understand
@@ -358,7 +358,7 @@
         \end{enumerate}
         
         A \textit{process productivity} number is calculated based entirely
-        off aspects of the SDLC and the 5 core measurements.  It is a number
+        on aspects of the SDLC and the 5 core measurements.  It is a number
         targeted at project teams working on the SDLC.  
        
     \subsection{A SIMPLER MEASUREMENT}
