--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -242,11 +242,11 @@
         \end{figure}
         
         Now that the distribution has been identified, the next step
-        is determining the Cumulative Distribution Function (C.D.F.)
-        for the distribution.  For Cauchy, the general C.D.F. is 
+        is determining the CDF
+        for the distribution.  For Cauchy, the general CDF is 
         given as follows.
         \[
-            C.D.F. = \frac{1}{\pi}\arctan{\frac{x-x_0}{\gamma}} + \frac{1}{2}
+            CDF(x) = \frac{1}{\pi}\arctan{\frac{x-x_0}{\gamma}} + \frac{1}{2}
         \]
         where 
         \begin{itemize}
