some more modifications and include CRI element scatterplot matrix

--- a/appendices.tex
+++ b/appendices.tex
@@ -14,7 +14,7 @@ APPENDIX\\
 \section{DETAILED STEPS OF THE SDLC}
 \label{app:detailedSDLC}
 
-    Often times the SDLC contains more than the 5 basic steps of requirements, design,
+    The SDLC often contains more than the 5 basic steps of requirements, design,
     implementation, testing, and  deployment/maintenance.  Those are the high-level
     phases, but many steps are required to complete each phase.  The following list
     provides a more detailed list of what needs to be accomplished in the 
