--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -341,7 +341,8 @@
                 the calculation.  The calculation approach is typically specified in
                 the contract associated with the SLA.  Thus, the Percent Uptime is important
                 and it can either be supplied in the data or calculated from the 
-                optional fields.
+                optional fields. For the purposes of this dissertation, the percent
+                uptime should be handled in decimal form and not as a percent out of 100.
             
             
                 \begin{longtable}{@{}l rr rr}
