--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -38,7 +38,7 @@
         a programming language designed for managing data in relational database 
         management system.\nomenclature{SQL}{Structured Query Language}} 
         is written for an Oracle
-        database, but the scripts can be modified to work with another database
+        database, but the scripts can be modified to work with other databases
         such as: PostgreSQL, SQL Server, or MySQL.  
         
         \subsubsection{TABLES FOR RAW CRI DATA}
