--- a/references.bib
+++ b/references.bib
@@ -927,7 +927,7 @@
     author = {Ryan Swanstrom},
     title = {CRI Scores for Dissertation},
     organization = {Sense},
-    url = {http://goo.gl/qHVZ6J},
+    url = {http://goo.gl/NuEZsf},
     year = {2015},
     month = {3},
     notes = {R source code output}
