--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -3,7 +3,7 @@
 
 \section{FUTURE WORK}
 
-    Due to the number of issues with surveys.  One area of future work would be indentifying
+    Due to the number of issues with surveys.  One area of future work would be identifying
     a general set of questions that would best fit CRI.  This set would have to include
     the best number of questions, order of questions and wording of questions.  Therefore,
     any new organization would not have to determine their own survey, but rather just use the
@@ -16,10 +16,10 @@
     on a fixed budget, CRI could be 
     expanded to include another element for financial data. The challenge arises when
     determining how to relate the SDO performance to finances.  The most likely scenario
-    would be a method to either select or predicted the expected software sales
+    would be a method to either select or predict the expected software sales
     for a month.  Then every month create an CRI element score that reflects
     how much the expected sales were exceeded or missed.  The other missing
-    balanced scorecard characteristic is learning and growth.  Those are very difficult
+    balanced scorecard characteristic is learning and growth.  These are very difficult
     to quantitatively measure.  In this case some possible data points might be:
     hours of training, number of training courses, number of employees receiving
     training, number of promotions, or another measure centered around training
@@ -39,7 +39,7 @@
     The new elements are in the unshaded boxes, and they are not exhaustive.
     Data-driven software engineering should 
     not to be confused with data-driven programming, in which the computer code
-    describes the data instead of the sequence of opertions \cite{DDP2015}.
+    describes the data instead of the sequence of operations \cite{DDP2015}.
     
     \begin{figure}[ht]
     \includegraphics[scale=.75]{images/sdlcae-adv.png}
@@ -54,8 +54,9 @@
     data can be tracked for the existing phases.
     Schedules for each of the individual phases of the SDLC need to be tracked,
     not just the entire project.  Teams need to know how much time is spent
-    in design versus testing.  Also, how much time is required to generate
-    proper test cases?  These are just a couple of examples of expansions
+    in design versus testing.  Consideration should also be given to the amount
+    of time required to generate
+    proper test cases.  These are just a couple of examples of expansions
     to the SDLC-AE.  These and other advancements could lead to greater
     insights about SDLC phases that are struggling and need improvement.
     The SDLC-AE could be expanded to have predictive capabilities.
@@ -90,9 +91,9 @@
     \end{itemize}
     
     Now SDOs have a technique to consistently measure performance over time.  CRI
-    should help upper-level management identify the areas of the organization
-    that need attention and those that do not.  CRI should save time required to 
-    evaluate the performance since the result is a single number.  
+    will help upper-level management identify the areas of the organization
+    that need attention and those that do not.  CRI will save time required to 
+    evaluate performance since the result is a single number.  
     
     
 \end{document}
