make testcase one word

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -27,7 +27,7 @@
     satisfaction, schedule, and requirements.  It is not meant
     to be comparative between organizations, but to 
     form a historical baseline for a specific organization.  The single
-    number is targeted for upper-level management whom need a quick
+    number is targeted for upper-level management who need a quick
     and simple strategy to evaluate the performance of the organization.
 
 \subsection{OVERVIEW}
@@ -57,7 +57,7 @@
     organizations to measure and focus solely on the source code
     being produced.  However, an SDO does more
     than just produce source code.  There is documentation to be
-    written, test cases to be created, systems to be deployed, and
+    written, testcases to be created, systems to be deployed, and
     decisions to be made.  The framework provides an evaluation
     of the overall SDO, not just the
     source code.
@@ -76,7 +76,7 @@
 
 
 \subsection{TERMINOLOGY}
-    Like any other business domain, the software engineering field has number
+    Like any other business domain, the software engineering field has a number
     of specific terms.  Many of these terms will be used throughout the remainder
     of the document, so definitions are provided.  
 
@@ -102,7 +102,7 @@
                     invalid or unacceptable results'' as quoted from Capers Jones
                 \cite{Jones2009}.  It is important to mention that even though defects are typically 
                 found in the computer code, a defect should not be isolated to just code.   
-                A poorly written requirement or missed test cases can 
+                A poorly written requirement or missed testcases can 
                 both be considered a defect.  Other common names for a defect 
                 are: bug, error, fault, or ticket.
     \end{description}
@@ -129,7 +129,7 @@
     management, software engineering, and 
     other maintenance processes.  Five maturity levels are 
     specified, and they include the 
-    existence of a number of process areas.  The 5 maturity 
+    existence of a number of process areas.  The five maturity 
     levels and the process areas are specified as follows.
 
     \begin{description}
