--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -174,7 +174,7 @@
                         Obviously, 
                         this item only counts as a level of
                         effort for development unless coding in used to generate
-                        automated test cases. \footnote{Automated testing is the
+                        automated testcases. \footnote{Automated testing is the
                         process of creating software to automatically run tests
                         against other software.  The adoption of automated testing
                         is varied and it is not a solution in all cases 
@@ -185,10 +185,10 @@
                         lines of source code.  This number is different from above
                         since it does not include all the lines of source code.  Similar
                         to above, this number makes more sense for development effort.
-                    \item[Test Cases] A test case is a step or series of steps followed
+                    \item[Testcases] A testcase is a step or series of steps followed
                         to validate some expected outcome of software.  Organizations
-                        will create a number of test cases to be validated for a
-                        software system.  The number of such test cases could
+                        will create a number of testcases to be validated for a
+                        software system.  The number of such testcases could
                         be used as a level of testing effort.
                 \end{description}
                 
